[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyd2v"
version = "1.3.0"
description = "A Python Parser for DGMPGDec's D2V Project Files."
license = "MIT"
authors = ["PHOENiX <rlaphoenix@pm.me>"]
maintainers = ["PHOENiX <rlaphoenix@pm.me>"]
readme = "README.md"
homepage = "https://github.com/rlaphoenix/pyd2v"
repository = "https://github.com/rlaphoenix/pyd2v"
keywords = ["python", "d2v", "dgindex", "dgmpgdec", "mpeg"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
click = "^8.1.7"
jsonpickle = "^3.0.2"

[tool.poetry.scripts]
d2v = "pyd2v.__main__:main"
